# libnice

./: .arcconfig  .gitignore  .gitlab-ci.yml  .lcovrc  AUTHORS  CMakeLists.txt  COPYING  COPYING.MPL  Doxyfile.in  Makefile.am  NEWS  README  README.win32  TODO  _boring  autogen.sh  common.mk  config.h.in.cmake  configure.ac  meson.build  meson_options.txt
address/: Makefile.am  address.c  address.h  test.c
agent/: Makefile.am  address.c  address.h  agent-priv.h  agent-signals-marshal.list  agent.c  agent.h  candidate-priv.h  candidate.c  candidate.h  check-test-fullmode-with-stun.sh  component.c  component.h  conncheck.c  conncheck.h  debug.c  debug.h  discovery.c  discovery.h  event.c  event.h  inputstream.c  inputstream.h  interfaces.c  interfaces.h  iostream.c  iostream.h  meson.build  outputstream.c  outputstream.h  pseudotcp.c  pseudotcp.h  readline.c  stream.c  stream.h  test-add-remove-stream.c  test-add-stream.c  test-fallback.c  test-fullmode.c  test-mainloop.c  (+12 more)
docs/: Makefile.am  design.txt
docs/reference/: Makefile.am
docs/reference/libnice/: Makefile.am  libnice-docs.sgml  libnice-docs.xml  libnice-sections.txt  meson.build  states.gv
docs/reference/libstun/: Makefile.am
examples/: Makefile.am  meson.build  sdp-example.c  simple-example.c  threaded-example.c
gst/: Makefile.am  gstnice.c  gstnice.h  gstnicesink.c  gstnicesink.h  gstnicesrc.c  gstnicesrc.h  jingle-gst-test-server.c  meson.build  test.c
local/: Makefile.am  list-local-interfaces.c  local.c  local.h
nice/: Makefile.am  gen-def.py  gen-map.py  ice-test-client.c  ice-test-server.c  jingle-test-server.c  libnice.pc.in  libnice.sym  libnice.symbols  libnice.ver  meson.build  nice-version.h.in  nice.h  nice.pc.in  readline.c  readline.h  test-readline.c  test-symbols.sh  test-util.c  util.c  util.h
random/: Makefile.am  meson.build  random-glib.c  random-glib.h  random.c  random.h  test.c
scripts/: check-symbols.sh  lcov.mk  lcov.sh  make-symbol-list.sh  valgrind-test-driver  valgrind.sh
socket/: Makefile.am  http.c  http.h  meson.build  pseudossl.c  pseudossl.h  socket-priv.h  socket.c  socket.h  socks5.c  socks5.h  tcp-active.c  tcp-active.h  tcp-bsd.c  tcp-bsd.h  tcp-passive.c  tcp-passive.h  tcp-turn.c  tcp-turn.h  test-bsd.c  test-echo.sh  turn.c  turn.h  udp-bsd.c  udp-bsd.h  udp-fake.c  udp-turn-over-tcp.c  udp-turn-over-tcp.h  udp-turn.c  udp-turn.h
stun/: Makefile.am  bind.c  bind.h  bindserv.c  build-unknown.sh  conncheck.h  constants.h  crc32.c  debug.c  debug.h  hmac.c  md5.c  md5.h  meson.build  nonce.c  rand.c  rand.h  relay.c  relay.h  sha1.c  sha1.h  stun-client.c  stun-ice.c  stun-ice.h  stun-msg.h  stun-server.c  stun.c  stun.h  stun3489bis.c  stun3489bis.h  stun5389.c  stun5389.h  stunagent.c  stunagent.h  stunbdc.c  stuncrc32.c  stuncrc32.h  stund.c  stunhmac.c  stunhmac.h  (+24 more)
stun/tests/: Makefile.am  bind.c  check-bind.sh  crc32.c  format.c  meson.build  parse.c  test-bind.c  test-bindserv.c  test-conncheck.c  test-crc32.c  test-format.c  test-hmac.c  test-parse.c  test-turn.c
stun/tools/: Makefile.am  bind.c  bind.h  meson.build  stunbdc.c  stund.c  stund.h  trans.c  trans.h
stun/usages/: bind.c  bind.h  ice.c  ice.h  stun-ice.c  stun-ice.h  timer.c  timer.h  trans.c  trans.h  turn.c  turn.h
stun/utils/: stunbdc.c  stund.c  stund.h
subprojects/: glib.wrap  zlib.wrap
tests/: Makefile.am  check-test-fullmode-with-stun.sh  instrument-send.c  instrument-send.h  libnice.supp  meson.build  slow-resolver.c  test-add-remove-stream.c  test-address.c  test-bsd.c  test-build-io-stream.c  test-bytestream-tcp.c  test-common.c  test-common.h  test-consent.c  test-credentials.c  test-different-number-streams.c  test-dribble.c  test-drop-invalid.c  test-exdata.c  test-fallback.c  test-fullmode-with-stun.c  test-fullmode.c  test-gstreamer.c  test-icetcp.c  test-interfaces.c  test-io-stream-cancelling.c  test-io-stream-closing-read.c  test-io-stream-closing-write.c  test-io-stream-closing.c  test-io-stream-common.c  test-io-stream-common.h  test-io-stream-pollable.c  test-io-stream-thread.c  test-mainloop.c  test-new-dribble.c  test-new-trickle.c  test-nomination.c  test-priority.c  test-pseudotcp-fin.c  (+15 more)
tests/docker/centos7-autotools/: Dockerfile
tests/docker/centos7-meson/: Dockerfile  pip-installs.sh
tests/docker/centos8/: pip-installs.sh
tests/docker/fedora38/: pip-installs.sh
udp/: Makefile.am  test-bsd.c  test-echo.sh  test-fake.c  test.c  udp-bsd.c  udp-bsd.h  udp-client.c  udp-echo-server.c  udp-fake.c  udp-fake.h  udp-generic.c  udp-turn.c  udp-turn.h  udp.c  udp.h
win32/: dogenmarshal.cmd
win32/vs9/: config.h  glib.vcproj  libnice.def  libnice.sln  libnice.vcproj  test-add-remove-stream.vcproj  test-address.vcproj  test-bind.vcproj  test-dribble.vcproj  test-fallback.vcproj  test-fullmode.vcproj  test-parse.vcproj  test-pseudotcp.vcproj  test-restart.vcproj  test-thread.vcproj  test.vcproj
